# AAOS

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  ccd.h  config.h  configure.ac  serial.c  serial.h  serial_r.h
cores/: Makefile.am  adt.c  adt.h  adt_r.h  astro.c  astro.h  daemon.c  daemon.h  daemon_r.h  def.h  log.c  log.h  log_def.h  log_r.h  log_rpc.c  log_rpc.h  log_rpc_r.h  net.c  net.h  net_r.h  object.c  object.h  object_r.h  protocol.c  protocol.h  protocol_r.h  rpc.c  rpc.h  rpc_r.h  utils.c  utils.h  virtual.c  virtual.h  virtual_r.h  wrapper.c  wrapper.h
docs/: .gitignore  Makefile.am  aws_data_field.3.md  aws_data_log.3.md  aws_get.3.md  aws_get_channel_by_name.3.md  aws_get_index_by_name.3.md  aws_inspect.3.md  aws_status.3.md  def.3.md  detector.1.md  detector_abort.3.md  detector_clear_option.3.md  detector_clear_opttion.3.md  detector_delete_all_image.3.md  detector_delete_image.3.md  detector_disable_cooling.3.md  detector_enable_cooling.3.md  detector_expose.3.md  detector_get_binning.3.md  detector_get_capture_mode.3.md  detector_get_directory.3.md  detector_get_exposure_time.3.md  detector_get_frame_rate.3.md  detector_get_gain.3.md  detector_get_image.3.md  detector_get_index_by_name.3.md  detector_get_option.3.md  detector_get_overscan.3.md  detector_get_pixel_format.3.md  detector_get_prefix.3.md  detector_get_readout_rate.3.md  detector_get_region.3.md  detector_get_temperature.3.md  detector_get_template.3.md  detector_get_trigger_mode.3.md  detector_info.3.md  detector_init.3.md  detector_inspect.3.md  detector_list_image.3.md  (+58 more)
drivers/: Makefile.am  ascom.c  ascom.h  ascom_r.h  aws.c  aws.h  aws_def.h  aws_r.h  aws_rpc.c  aws_rpc.h  aws_rpc_r.h  detector.c  detector.h  detector_def.h  detector_r.h  detector_rpc.c  detector_rpc.h  detector_rpc_r.h  device.c  device.h  device_r.h  dome.c  dome.h  dome_def.h  dome_r.h  dome_rpc.c  dome_rpc.h  dome_rpc_r.h  pdu.c  pdu.h  pdu_def.h  pdu_r.h  pdu_rpc.c  pdu_rpc.h  pdu_rpc_r.h  scheduler.c  scheduler.h  scheduler_def.h  scheduler_r.h  scheduler_rpc.c  (+28 more)
mics/: Makefile.am  cnsleep.c  lockfile.c  scheduler_admin.c  scheduler_protocol_test.c  waitpid  waitpid.c
modules/: lenghu.py
scripts/database/: scheduler_database.sh
scripts/systemd/: awsd.service  seriald.service
scripts/sysv/: rc.awsd  rc.seriald
scripts/template/: airbt_leading_template.py  sitian_camera_template.py  sysu80_k_camera_template.py  zwo_camera_template.py
src/: Makefile.am  aws_client.c  aws_server.c  clock_nanospleep.c  detector_client.c  detector_server.c  dome_client.c  dome_server.c  pdu_client.c  pdu_server.c  scheduler_client.c  scheduler_server.c  serial_client.c  serial_server.c  telescope_client.c  telescope_server.c  thermal_client.c  thermal_server.c  thread_client.c  thread_server.c
