#noinst_LTLIBRARIES = libaaoscore.la
#libaaoscore_a_SOURCES = def.h wrapper.h wrapper.c object.h object_r.h object.c virtual.h virtual_r.h virtual.c adt.h adt_r.h adt.c daemon.h daemon_r.h daemon.c net.h net_r.h net.c protocol.h protocol_r.h protocol.c rpc.h rpc_r.h rpc.c serial.h serial_r.h serial.c serial_rpc.h serial_rpc_r.h serial_rpc.c aws_def.h aws.h aws_r.h aws.c aws_rpc.h aws_rpc_r.h aws_rpc.c
lib_LTLIBRARIES = libaaoscore.la
libaaoscore_la_SOURCES = def.h astro.h astro_r.h astro.c wrapper.h wrapper.c object.h object_r.h object.c virtual.h virtual_r.h virtual.c adt.h adt_r.h adt.c daemon.h daemon_r.h daemon.c net.h net_r.h net.c protocol.h protocol_r.h protocol.c rpc.h rpc_r.h rpc.c
libaaoscore_a_CFLAGS = -I$(top_srcdir)/cores -fPIC
libaaoscore_la_LDFLAGS = -version-info 0:1:0
