include_HEADERS = aws.h aws_r.h aws_def.h aws_rpc.h aws_rpc_r.h device.h device_r.h detector.h detector_r.h detector_def.h detector_rpc.h detector_rpc_r.h dome.h dome_r.h dome_def.h dome_rpc.h dome_rpc_r.h serial.h serial_r.h serial_rpc.h serial_rpc_r.h pdu_def.h pdu.h pdu_r.h pdu.c pdu_rpc.h pdu_rpc_r.h pdu_rpc.c telescope.h telescope_r.h telescope_def.h telescope_rpc.h telescope_rpc_r.h thermal_def.h thermal.h thermal_r.h thermal_rpc.h thermal_rpc_r.h scheduler_def.h scheduler.h scheduler_r.h scheduler.c scheduler_rpc.h scheduler_rpc_r.h scheduler_rpc.c
lib_LTLIBRARIES = libaaosdriver.la
libaaosdriver_la_SOURCES = device.h device_r.h device.c detector.h detector_r.h detector_def.h detector.c detector_rpc.h detector_rpc_r.h detector_rpc.c serial.h serial_r.h serial.c serial_rpc.h serial_rpc_r.h serial_rpc.c aws_def.h aws.h aws_r.h aws.c aws_rpc.h aws_rpc_r.h aws_rpc.c pdu_def.h dome.h dome_r.h dome_def.h dome.c dome_rpc.h dome_rpc_r.h dome_rpc.c pdu.h pdu_r.h pdu.c pdu_rpc.h pdu_rpc_r.h pdu_rpc.c telescope_def.h telescope.h telescope_r.h telescope.c telescope_rpc.h telescope_rpc.h telescope_rpc.c thermal_def.h thermal.h thermal_r.h thermal.c thermal_rpc.h thermal_rpc_r.h thermal_rpc.c scheduler_def.h scheduler.h scheduler_r.h scheduler.c scheduler_rpc.h scheduler_rpc_r.h scheduler_rpc.c
libaaosdriver_la_CFLAGS = -I$(top_srcdir)/cores -fPIC -Wno-unused-result
libaaosdriver_la_LDFLAGS = -version-info 0:2:0
